--- a/productions/celery.conf
+++ b/productions/celery.conf
@@ -5,7 +5,7 @@
 CELERY_BIN="/var/KBMarshalService/venv/bin/celery"
 CELERYD_USER="www-data"
 CELERYD_GROUP="www-data"
-CELERY_APP="/var/KBMarshalService/web_service/web_service/celery:app"
+CELERY_APP="/var/KBMarshalService/web_service/web_service/celery.py:app"
 
 # Common env settings
 DJANGO_SETTINGS_MODULE=settings.production
