fixed busness_logic.py part2

--- a/productions/celery.conf
+++ b/productions/celery.conf
@@ -1,11 +1,12 @@
 # Файл конфигурации сервисов celeryd и celerybeat (Выполнить команду  -  cp celery.conf /etc/systemd/)
+# nano /etc/systemd/celery.conf
 # http://docs.celeryproject.org/en/latest/tutorials/daemonizing.html#available-options
 
 # Common Celery Settings
 CELERY_BIN="/var/KBMarshalService/venv/bin/celery"
 CELERYD_USER="www-data"
 CELERYD_GROUP="www-data"
-CELERY_APP="/var/KBMarshalService/web_service/web_service/celery.py:app"
+CELERY_APP="/var/KBMarshalService/web_service/web_service/celery:app"
 
 # Common env settings
 DJANGO_SETTINGS_MODULE=settings.production
